Comment controller, router
